# gamedev

./: CMakeLists.txt  main.cpp
05_optimized_surface_loading_and_soft_stretching/: 05_optimized_surface_loading_and_soft_stretching.cpp
06_extension_libraries_and_loading_other_image_formats/: 06_extension_libraries_and_loading_other_image_formats.cpp
07_texture_loading_and_rendering/: 07_texture_loading_and_rendering.cpp
09_the_viewport/: 09_the_viewport.cpp
11_clip_rendering_and_sprite_sheets/: 11_clip_rendering_and_sprite_sheets.cpp
14_animated_sprites_and_vsync/: 14_animated_sprites_and_vsync.cpp
15_rotation_and_flipping/: 15_rotation_and_flipping.cpp
